--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "twitter-bot",
   "version": "1.0.0",
   "description": "Twitter Bot to retweet and like twitter posts",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kenneth",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node": "^14.5.0",
     "nodemon": "^2.0.4",
